[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unblock_pihole"
version = "1.0.0"
description = "A web interface to remotely enable/disable Pi-hole's DNS blocking feature"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Sean Anderson"}]

[project.scripts]
unblock_pihole = "unblock_pihole.server:main"

[tool.setuptools.packages.find]
include = ["unblock_pihole*"]

[tool.setuptools.package-data]
unblock_pihole = ["templates/*.html"]
